# operation-safe-passage

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: documentation.yml  pytests.yml
config/: params.json
docs/: conf.py  index.rst
docs/modules/: modules.rst
docs/modules/agent/: agent.rst  modules.rst  uav.rst  ugv.rst
docs/modules/controller/: mission_controller.rst  modules.rst  osp_gym.rst  validate_mission_params.rst
docs/modules/environment/: environment.rst  map_generator.rst  modules.rst  time_keeper.rst
docs/modules/policies/: modules.rst  osp_rl.rst
docs/notebooks/: agent_creation.ipynb  gym_usage.ipynb  map_creation.ipynb  mission_controller.ipynb
docs/notebooks/config/: params_agents.json  params_map.json  params_test.json  premade_network.json
src/operation_safe_passage/agent/: agent.py  uav.py  ugv.py
src/operation_safe_passage/controller/: mission_controller.py  osp_gym.py  validate_mission_params.py
src/operation_safe_passage/environment/: environment.py  map_generator.py  time_keeper.py
src/operation_safe_passage/policies/: osp_rl.py
tests/agent/: test_agent.py  test_uav.py  test_ugv.py
tests/controller/: test_mission_controller.py  test_osp_gym.py  test_validate_mission_params.py
tests/environment/: test_environment.py  test_map_generator.py  test_time_keeper.py
tests/policies/: test_run_gym.py
